--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="js/app.js"></script>
     <script src="js/annyang-service.js"></script>
     <script src="js/weather-service.js"></script>
+    <script src="js/stock-service.js"></script>
+    <script src="js/sports-service.js"></script>
     <script src="js/map-service.js"></script>
     <script src="js/hue-service.js"></script>
     <script src="js/geolocation-service.js"></script>
@@ -42,7 +44,24 @@
               <span class="tempreture tempreture-max">{{forcast.temperatureMax}}</span>
             </div>
           </div>
+          <div class="weather-today">
+            <span class="tempreture">{{stock.Name}}</span>
+            <div class="weather-week-day">
+              <span class="day light-grey">{{stock.Symbol}}</span>
+              <span class="day light-grey">{{stock.LastPrice}}</span>
+              <span class="day light-grey">{{stock.Change}}</span>
+            </div>
+          </div>
         </div>
+          
+          <!-- <div class="weather-week-descriptor">{{weeklyForcast.summary}}</div>
+          <div class="weather-week" ng-repeat="forcast in weeklyForcast.data" ng-if="$index > 0">
+            <div class="weather-week-day">
+              <span class="day light-grey">{{forcast.day}}</span>
+              <span class="tempreture tempreture-min">{{forcast.temperatureMin}}</span>
+              <span class="tempreture tempreture-max">{{forcast.temperatureMax}}</span>
+            </div>
+          </div> -->
       </div>
     </div>
     <div class="container">
@@ -67,12 +86,13 @@
             <dt>Go home</dt>
             <dd>Takes you back to the home screen</dd>
             <dt>Show me ________</dt>
-            <dd>Will show you pictures of the requested item.</dd>
+            <!-- <dd>Will show you pictures of the requested item.</dd>
             <dt>Remind me to ________</dt>
             <dd>Add something to the reminders list.</dd>
             <dt>Clear reminders</dt>
-            <dd>Clears out your reminders list.</dd>
+            <dd>Clears out your reminders list.</dd> -->
             <dt>Show map</dt>
+            <dt>Set stock to ________</dt>
             <dd>Shows a map of your current city.</dd>
             <dt>Show map of ________</dt>
             <dd>Shows a map of the given location.</dd>
